--- a/lifecycle-data/products/microsoft-windows-xp-media-center-edition-2004.yml
+++ b/lifecycle-data/products/microsoft-windows-xp-media-center-edition-2004.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Windows XP Media Center Edition 2004
-  description: Microsoft Windows XP Media Center Edition 2004 volgt het vaste levenscyclus beleid.
+  title: Windows XP Media Center editie 2004
+  description: Microsoft Windows XP Media Center editie 2004 volgt het vaste levenscyclusbeleid.
   ms.date: 08/05/2020
   ms.openlocfilehash: 8dc0603e1db4f759c1d882a09a6b3d95ea08cbec
   ms.sourcegitcommit: cc83950a649c02cedd0a5a869702e8e5605d18ec
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/05/2020
   ms.locfileid: "883421"
-name: Microsoft Windows XP Media Center Edition 2004
+name: Windows XP Media Center editie 2004
 summary: >+
-  Microsoft Windows XP Media Center Edition 2004 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft Windows XP Media Center editie 2004 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Media Center
+  Dit is van toepassing op de volgende edities: Media Center
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 10/27/2003
   endDate: 10/10/2006
-content: "\n\n\n## <a name=\"editions\"></a>Edition \n* Media Center"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Media Center"
