--- a/lifecycle-data/products/dynamics-365-for-talent.yml
+++ b/lifecycle-data/products/dynamics-365-for-talent.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Dynamics 365 voor talent
-  description: Dynamics 365 for Talent volgt het modern lifecycle beleid.
+  title: Dynamics 365 voor Talent
+  description: Dynamics 365 voor Talent volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: d6dc50f8fa82bcf711b79df464c150fdbf9d1ec6
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868708"
-name: Dynamics 365 voor talent
+name: Dynamics 365 voor Talent
 summary: >+
-  Dynamics 365 for Talent volgt het [modern](/lifecycle/policies/modern) lifecycle beleid.
+  Dynamics 365 voor Talent volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Onboard
+  Dit is van toepassing op de volgende edities: Onboard
 
 products:
 - dynamics
@@ -26,4 +26,4 @@ releases:
 - version: Original Release
   startDate: 07/31/2017
   endDate: 02/02/2022
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Systeemvereisten](/dynamics365/talent/talent-versions-update-policy#supported-microsoft-office-applications)\n* [Migratiebegeleiding](https://cloudblogs.microsoft.com/dynamics365/bdm/2019/12/06/building-a-more-successful-workforce-with-dynamics-365-human-resources)\n\n> [!NOTE]\n> Attract en Onboard apps worden op 2 februari 2022 met pensioen.  Core HR is op 1 februari 2020 opnieuw gelanceerd als Dynamics 365 Human Resources, zie migratierichtlijnen voor meer informatie.\n\n## <a name=\"editions\"></a>Edities \n* Onboard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Systeemvereisten](/dynamics365/talent/talent-versions-update-policy#supported-microsoft-office-applications)\n* [Richtlijnen voor migratie](https://cloudblogs.microsoft.com/dynamics365/bdm/2019/12/06/building-a-more-successful-workforce-with-dynamics-365-human-resources)\n\n> [!NOTE]\n> Attract- en Onboard-apps worden op 2 februari 2022 buiten gebruik gesteld.  Core HR is op 1 februari 2020 opnieuw gelanceerd als Dynamics 365 Human Resources, zie migratierichtlijnen voor meer informatie.\n\n## <a name=\"editions\"></a>Edities \n* Onboard"
