--- a/lifecycle-data/products/dynamics-crm-2016-dynamics-365.yml
+++ b/lifecycle-data/products/dynamics-crm-2016-dynamics-365.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics CRM 2016 (Dynamics 365)
-  description: Dynamics CRM 2016 (Dynamics 365) volgt het beleid voor vaste levenscyclus.
+  description: Dynamics CRM 2016 (Dynamics 365) volgt het vaste levenscyclusbeleid.
   ms.date: 07/30/2020
   ms.openlocfilehash: 8beedf478a2c2a00e1ade51fabd10be809909489
   ms.sourcegitcommit: e1941880c1a05c5950b0aa216448eba49d88be22
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/30/2020
   ms.locfileid: "878776"
 name: Dynamics CRM 2016 (Dynamics 365)
 summary: >+
-  Dynamics CRM 2016 (Dynamics 365) volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics CRM 2016 (Dynamics 365) volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -31,4 +31,4 @@ releases:
 - version: Original Release (ver 8.0)
   startDate: 11/30/2015
   endDate: 07/10/2018
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Dynamics 365 Migratieprogramma](https://dynamics.microsoft.com/migration-program/)\n* [Ondersteuningsinformatie](https://support.microsoft.com/help/2925359/microsoft-dynamics-crm-online-releases)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Dynamics 365 Migratieprogramma](https://dynamics.microsoft.com/migration-program/)\n* [Ondersteuningsgegevens](https://support.microsoft.com/help/2925359/microsoft-dynamics-crm-online-releases)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
