--- a/lifecycle-data/products/microsoft-lync-server-2010.yml
+++ b/lifecycle-data/products/microsoft-lync-server-2010.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Lync Server 2010
-  description: Microsoft Lync Server 2010 volgt het beleid voor een vaste levenscyclus.
+  description: Microsoft Lync Server 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 07/30/2020
   ms.openlocfilehash: 093060d50a15334bdeac1891bf7828d50ad0f9dc
   ms.sourcegitcommit: e219a019691b1cde9e6f715e4e725b5861450d57
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/31/2020
   ms.locfileid: "879446"
 name: Microsoft Lync Server 2010
 summary: >+
-  Microsoft Lync Server 2010 volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Lync Server 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise, Group Chat Software Development Kit, SDK, Standard
+  Dit is van toepassing op de volgende edities: Enterprise, Group Chat Software Development Kit, SDK, standaard
 
 products:
 - office
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 01/25/2011
   endDate: 04/13/2021
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Lync Phone Edition](/lifecycle/products/microsoft-lync-phone-edition?branch=live)\n\n> [!NOTE]\n> Lync Phone Edition wordt ondersteund met Lync Server 2010 en Lync Server 2013. De ondersteuningsdatum voor Lync Phone Edition is met twee jaar verlengd om af te stemmen op de levenscyclus van Lync Server 2013.\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Group Chat Software Development Kit\n* Sdk\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Lync Phone-editie](/lifecycle/products/microsoft-lync-phone-edition?branch=live)\n\n> [!NOTE]\n> Lync Phone-edtie wordt ondersteund met Lync Server 2010 en Lync Server 2013. De ondersteuningsdatum voor Lync Phone-editie is met twee jaar verlengd om af te stemmen op de levenscyclus van Lync Server 2013.\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Group Chat Software Development Kit\n* SDK\n* Standard"
