--- a/lifecycle-data/products/microsoft-sql-server-2008.yml
+++ b/lifecycle-data/products/microsoft-sql-server-2008.yml
@@ -1,25 +1,25 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft SQL Server 2008
-  description: Microsoft SQL Server 2008 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft SQL Server 2008 volgt het vaste levenscyclusbeleid.
   ms.date: 08/03/2020
   ms.openlocfilehash: 15d47cb19d68d2ebb70659d43f7341eba2db1663
   ms.sourcegitcommit: ea5579a833360652f47792f68134e2b25be4d487
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/04/2020
   ms.locfileid: "882210"
 name: Microsoft SQL Server 2008
 summary: >
-  Microsoft SQL Server 2008 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft SQL Server 2008 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Datacenter, Developer, Enterprise, Express, Express with Advanced Services, Standard, Standard Edition for Small Business, Web, Workgroup
+  Dit is van toepassing op de volgende edities: Datacenter, Developer, Enterprise, Express, Express met geavanceerde services, Standaard, Standaardeditie voor Professionals en Kleine Bedrijven, Web, Workgroup
 
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd. Zie de migratiebegeleiding hieronder.
+  > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
 - sql-server
 policyType: fixed
@@ -43,4 +43,4 @@ releases:
 - version: Original Release
   startDate: 11/06/2008
   endDate: 04/13/2010
-content: "> [!TIP]\n> Uitgebreide beveiligingsupdates (ESU) zijn beschikbaar voor de datacenter-, standaard-, ondernemings-, web- en werkgroepedities van dit product, voor maximaal drie jaar na het einde van de ondersteuning.\nRelease-------------------------------Startdatum----Datum\n\nVerlengde beveiligingsupdate jaar 3---07/13/2021---07/12/2022\n\nVerlengde beveiligingsupdate jaar 2---07/14/2021---07/13/2021\n\nVerlengde beveiligingsupdate jaar 1---07/9/2019---07/14/2020\n\n\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://azure.microsoft.com/blog/announcing-new-options-for-sql-server-2008-and-windows-server-2008-end-of-support/)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Uitgebreid beveiligingsupdateprogramma (ESU)](/lifecycle/faq/extended-security-updates)\n* [SQL Release Services Blog](https://blogs.msdn.com/b/sqlreleaseservices/archive/2014/09/26/sql-server-2008-r2-service-pack-3-has-released.aspx)\n\n> [!NOTE]\n> Alleen voor IA64 wordt SP3 ondersteund tot 7/9/2019.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Ontwikkelaar\n* Enterprise\n* Express\n* Express met geavanceerde services\n* Standaard\n* Standard Edition voor kleine bedrijven\n* Web\n* Werkgroep"
+content: "> [!TIP]\n> Voor de Datacenter-, Standard-, Enterprise-, Web- en Workgroup-edities van dit product zijn extra beveiligingsupdates (Extended Security Updates/ESU) beschikbaar voor tot drie aanvullende jaren na beëindiging van de ondersteuning.\nRelease-------------------------------Startdatum----Datum\n\nExtra beveiligingsupdate jaar 3---13/07/2021---12/07/2022\n\nExtra beveiligingsupdate jaar 2---14/07/2021---13/07/2021\n\nExtra beveiligingsupdate jaar 1---09/07/2019---14/07/2020\n\n\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://azure.microsoft.com/blog/announcing-new-options-for-sql-server-2008-and-windows-server-2008-end-of-support/)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [Extended Security Update (ESU) programma](/lifecycle/faq/extended-security-updates)\n* [SQL Release Services-blog](https://blogs.msdn.com/b/sqlreleaseservices/archive/2014/09/26/sql-server-2008-r2-service-pack-3-has-released.aspx)\n\n> [!NOTE]\n> Alleen voor IA64 wordt SP3 ondersteund tot 09/07/2019.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Developer\n* Enterprise\n* Express\n* Express met geavanceerde services\n* Standard\n* Standaardeditie voor Professionals en Kleine Bedrijven\n* Web\n* Workgroup"
