--- a/lifecycle-data/products/microsoft-sql-server-2012-parallel-data-warehouse.yml
+++ b/lifecycle-data/products/microsoft-sql-server-2012-parallel-data-warehouse.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft SQL Server 2012 Parallel Data Warehouse (Analytics Platform System)
-  description: Microsoft SQL Server 2012 Parallel Data Warehouse (Analytics Platform System) volgt het beleid voor vaste levenscyclus.
+  description: Microsoft SQL Server 2012 Parallel Data Warehouse (Analytics Platform System) volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 78651a46cb453708bccc394e512756a7c24b599d
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868817"
 name: Microsoft SQL Server 2012 Parallel Data Warehouse (Analytics Platform System)
 summary: >
-  Microsoft SQL Server 2012 Parallel Data Warehouse (Analytics Platform System) volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft SQL Server 2012 Parallel Data Warehouse (Analytics Platform System) volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > SQL Server 2012 Parallel Data Warehouse (PDW) is omgedoopt tot APS (Analytics Platform System)
+  > SQL Server 2012 Parallel Data Warehouse (PDW) heet nu APS (Analytics Platform System)
 products:
 - sql-server
 policyType: fixed
@@ -29,4 +29,4 @@ releases:
 - version: Original Release
   startDate: 07/12/2013
   endDate: 10/08/2024
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Productinformatie](https://www.microsoft.com/sql-server/analytics-platform-system)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](https://www.microsoft.com/sql-server/analytics-platform-system)"
