--- a/lifecycle-data/products/visual-studio-2017.yml
+++ b/lifecycle-data/products/visual-studio-2017.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visual Studio 2017
-  description: Visual Studio 2017 volgt het beleid voor vaste levenscyclus.
+  description: Visual Studio 2017 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 28e7d911a453418021aba3ecfa7e96ca8c5ed73f
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868741"
 name: Visual Studio 2017
 summary: >+
-  Visual Studio 2017 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Visual Studio 2017 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Agents, Build Tools, Community, Enterprise, Feedback Client, for Mac, IntelliTrace Standalone Collector, Performance Tools, Professional, Remote Tools, Team Explorer, Test Professional, Visual C++ Redistributable
+  Dit is van toepassing op de volgende edities: Agents, Opbouwhulpmiddelen, Community, Enterprise, Feedback Client, voor Mac, IntelliTrace Standalone Collector, prestatiehulpprogramma's, Professional, Werkbalk extern, Team Explorer, Test Professional, Visual C++ herdistribueerbaar
 
 products:
 - vs
@@ -30,4 +30,4 @@ releases:
 - version: Version 15.0
   startDate: 03/07/2017
   endDate: 01/14/2020
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Aankondiging](https://devblogs.microsoft.com/visualstudio/visual-studio-2017-and-visual-studio-for-mac-support-updates/)\n* [Onderhoudsinformatie](/visualstudio/productinfo/vs-servicing-vs#support-for-older-versions-of-visual-studio)\n\n\n## <a name=\"editions\"></a>Edities \n* Agenten\n* Hulpprogramma's maken\n* Community\n* Enterprise\n* Feedbackclient\n* voor Mac\n* IntelliTrace Standalone Collector\n* Prestatiehulpprogramma's\n* Professionele\n* Hulpprogramma's voor op afstand\n* Teamverkenner\n* Test Professional\n* Visueel C++ herverdeelbaar"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Aankondiging](https://devblogs.microsoft.com/visualstudio/visual-studio-2017-and-visual-studio-for-mac-support-updates/)\n* [Onderhoudsinformatie](/visualstudio/productinfo/vs-servicing-vs#support-for-older-versions-of-visual-studio)\n\n\n## <a name=\"editions\"></a>Edities \n* Agents\n* Opbouwhulpmiddelen\n* Community\n* Enterprise\n* Feedback client\n* Voor Mac\n* IntelliTrace Standalone Collector\n* Prestatiehulpprogramma's\n* Professional\n* Werkbalk extern\n* Team Explorer\n* Test Professional\n* Visual C++ herdistribueerbaar"
