--- a/lifecycle-data/products/visual-studio-2019.yml
+++ b/lifecycle-data/products/visual-studio-2019.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visual Studio 2019
-  description: Visual Studio 2019 volgt het beleid voor vaste levenscyclus.
+  description: Visual Studio 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 3bb4a3be253fe45b27fa6baa8f165dc2fbb3ffd1
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868739"
 name: Visual Studio 2019
 summary: >+
-  Visual Studio 2019 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Visual Studio 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Agents, Build Tools, Community, Enterprise, for Mac, IntelliTrace Standalone Collector, Performance Tools, Professional, Remote Tools, Team Explorer, Visual C++ Redistributable
+  Dit is van toepassing op de volgende edities: Agents, Opbouwhulpmiddelen, Community, Enterprise, voor Mac, IntelliTrace Standalone Collector, Prestatiehulpprogramma's, Professional, Werkbalk extern, Team Explorer, Visual C++ herdistribueerbaar
 
 products:
 - vs
@@ -30,4 +30,4 @@ releases:
 - version: Version 16.0
   startDate: 04/02/2019
   endDate: 01/12/2021
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Aankondiging](https://devblogs.microsoft.com/visualstudio/tis-the-season-visual-studio-2019/)\n* [Onderhoudsinformatie](/visualstudio/releases/2019/servicing)\n\n\n## <a name=\"editions\"></a>Edities \n* Agenten\n* Hulpprogramma's maken\n* Community\n* Enterprise\n* voor Mac\n* IntelliTrace Standalone Collector\n* Prestatiehulpprogramma's\n* Professionele\n* Hulpprogramma's voor op afstand\n* Teamverkenner\n* Visueel C++ herverdeelbaar"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Aankondiging](https://devblogs.microsoft.com/visualstudio/tis-the-season-visual-studio-2019/)\n* [Onderhoudsinformatie](/visualstudio/releases/2019/servicing)\n\n\n## <a name=\"editions\"></a>Edities \n* Agents\n* Opbouwhulpmiddelen\n* Community\n* Enterprise\n* Voor Mac\n* IntelliTrace Standalone Collector\n* Prestatiehulpprogramma's\n* Professional\n* Werkbalk extern\n* Team Explorer\n* Visual C++ herdistribueerbaar"
