--- a/lifecycle-data/products/windows-10-home-and-pro.yml
+++ b/lifecycle-data/products/windows-10-home-and-pro.yml
@@ -1,25 +1,25 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows 10 Home en Pro
-  description: Windows 10 Home and Pro volgt het beleid voor moderne levenscyclus.
+  description: Windows 10 Home en Pro volgt het moderne levenscyclusbeleid.
   ms.date: 07/30/2020
   ms.openlocfilehash: 9d3ad5a10e7df75162cbff42701d451e1299e3c4
   ms.sourcegitcommit: e3a3bd051020add66386d68528657bb59240d90b
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/30/2020
   ms.locfileid: "879135"
 name: Windows 10 Home en Pro
 summary: >
-  Windows 10 Home and Pro volgt het [beleid voor moderne](/lifecycle/policies/modern) levenscyclus.
+  Windows 10 Home en Pro volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Home, Pro, Pro for Education, Pro for Workstations, Professional
+  Dit is van toepassing op de volgende edities: Home, Pro, Pro voor Education, Pro voor Workstations, Professional
 
 
   > [!IMPORTANT]
 
-  > Microsoft blijft ten minste één Windows 10 Semi-Annual Channel ondersteunen tot 14 oktober 2025.
+  > Microsoft blijft ten minste één Windows 10 Semi-Annual-kanaal ondersteunen tot 14 oktober 2025.
 products:
 - windows
 policyType: modern-on-prem
@@ -57,4 +57,4 @@ releases:
 - version: Version 1507
   startDate: 07/29/2015
   endDate: 05/09/2017
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Windows as a Service (WaaS)](/windows/deployment/update/waas-quick-start)\n* [Factsheet levenscyclus van Windows](https://support.microsoft.com/help/13853/windows-lifecycle-fact-sheet)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n> [!NOTE]\n> Pro for Workstation voor het eerst uitgebracht met versie 1703\n> [!NOTE]\n> Tenzij uitgesteld, kunnen latere Windows 10 Semi-Annual Channel-functie-updates worden geïnstalleerd vóór het vermelde einde van de algemene ondersteuningsdatum.\n\n## <a name=\"editions\"></a>Edities \n* Start\n* Pro\n* Pro voor onderwijs\n* Pro voor werkstations\n* Professionele"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Windows als een service (WaaS)](/windows/deployment/update/waas-quick-start)\n* [Factsheet levenscyclus van Windows](https://support.microsoft.com/help/13853/windows-lifecycle-fact-sheet)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n> [!NOTE]\n> Pro voor Workstation voor het eerst uitgebracht met versie 1703\n> [!NOTE]\n> Tenzij uitgesteld, kunnen verdere functie-updates van Windows 10 Semi-Annual-kanaal geïnstalleerd worden vóór de vermelde einddatum van de basisondersteuning.\n\n## <a name=\"editions\"></a>Edities \n* Home\n* Pro\n* Pro voor Education\n* Pro voor Workstations\n* Professional"
