--- a/lifecycle-data/products/windows-10-iot-enterprise.yml
+++ b/lifecycle-data/products/windows-10-iot-enterprise.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows 10 IoT Enterprise
-  description: Windows 10 IoT Enterprise volgt het beleid voor moderne levenscyclus.
+  description: Windows 10 IoT Enterprise volgt het moderne levenscyclusbeleid.
   ms.date: 07/30/2020
   ms.openlocfilehash: 159055d404da77afef0694120dc1c2faf04a22e3
   ms.sourcegitcommit: e3a3bd051020add66386d68528657bb59240d90b
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/30/2020
   ms.locfileid: "879074"
 name: Windows 10 IoT Enterprise
 summary: >
-  Windows 10 IoT Enterprise volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Windows 10 IoT Enterprise volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 
   > [!IMPORTANT]
 
-  > Microsoft blijft ten minste één Windows 10 Semi-Annual Channel ondersteunen tot 14 oktober 2025.
+  > Microsoft blijft ten minste één Windows 10 Semi-Annual-kanaal ondersteunen tot 14 oktober 2025.
 products:
 - windows
 policyType: modern-on-prem
@@ -55,4 +55,4 @@ releases:
 - version: Version 1507
   startDate: 07/29/2015
   endDate: 05/09/2017
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Overzicht van Windows 10 IoT Enterprise](/windows/iot-core/windows-iot-enterprise)\n* [Factsheet levenscyclus van Windows](https://support.microsoft.com/help/13853/windows-lifecycle-fact-sheet)\n* [Windows as a Service (WaaS)](/windows/deployment/update/waas-quick-start)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n> [!NOTE]\n> Tenzij uitgesteld, kunnen latere Windows 10 Semi-Annual Channel-functie-updates worden geïnstalleerd vóór het vermelde einde van de algemene ondersteuningsdatum."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Overzicht van Windows 10 IoT Enterprise](/windows/iot-core/windows-iot-enterprise)\n* [Factsheet levenscyclus van Windows](https://support.microsoft.com/help/13853/windows-lifecycle-fact-sheet)\n* [Windows als een service (WaaS)](/windows/deployment/update/waas-quick-start)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n> [!NOTE]\n> Tenzij uitgesteld, kunnen verdere functie-updates van Windows 10 Semi-Annual-kanaal geïnstalleerd worden vóór de vermelde einddatum van de basisondersteuning."
