--- a/lifecycle-data/products/windows-81.yml
+++ b/lifecycle-data/products/windows-81.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Windows 8.1
-  description: Windows 8.1 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: f9a4bcbbb6bfcd3a4ddd5445f78d459baba2c3e2
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  title: Windows 8,1
+  description: Windows 8,1 volgt het vaste levenscyclus beleid.
+  ms.date: 08/21/2020
+  ms.openlocfilehash: 42fc7e148a73c5583047b7bed3862484dea56340
+  ms.sourcegitcommit: 72c1339c867caa2110c5c1501a6659bcee72415d
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851895"
-name: Windows 8.1
+  ms.lasthandoff: 08/21/2020
+  ms.locfileid: "906651"
+name: Windows 8,1
 summary: >+
-  Windows 8.1 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows 8,1 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise, Enterprise N, N, Pro with Media Center, Professional, Professional N
+  Dit geldt voor de volgende edities: Enterprise, Enterprise N, N, Pro met Media Center, Professional, Professional N, SL
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 11/13/2013
   endDate: 01/10/2023
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Onderneming N\n* N\n* Pro met Media Center\n* Professionele\n* Professioneel N"
+content: "\n## <a name=\"links\"></a>Verbindingen \n* [Veelgestelde vragen over de levenscyclus-Windows-producten](/lifecycle/faq/windows)\n\n\n## <a name=\"editions\"></a>Edition \n* Enterprise\n* Enterprise N\n* P\n* Pro met Media Center\n* Professional\n* Professionele N\n* LINEAIR"
