--- a/lifecycle-data/products/windows-server-2019.yml
+++ b/lifecycle-data/products/windows-server-2019.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Server 2019
-  description: Windows Server 2019 volgt het beleid voor vaste levenscyclus.
+  description: Windows Server 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: c074cbdb100e858572f6f6375311034d593055a9
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868722"
 name: Windows Server 2019
 summary: >+
-  Windows Server 2019 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Server 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Datacenter, Essentials, Standard
+  Dit is van toepassing op de volgende edities: Datacenter, Essentials, Standard
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 11/13/2018
   endDate: 01/09/2029
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Productinformatie](/windows-server/get-started-19/whats-new-19)\n* [Update op beschikbaarheid Windows Server 2019](https://aka.ms/WSRelaunchBlog)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n> [!NOTE]\n> Windows Server 2019 en Windows Server, versie 1809 zijn opnieuw uitgebracht op 13 november 2018. De ondersteuningsdata zijn dienovereenkomstig aangepast.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Onmisbaar\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/windows-server/get-started-19/whats-new-19)\n* [Beschikbaarheid update Windows Server 2019](https://aka.ms/WSRelaunchBlog)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n> [!NOTE]\n> Windows Server 2019 en Windows Server, versie 1809 zijn opnieuw uitgebracht op 13 november 2018. De ondersteuningsdatums zijn op basis hiervan aangepast.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Essentials\n* Standard"
