--- a/lifecycle-data/products/windows-server-iot-2019-for-storage.yml
+++ b/lifecycle-data/products/windows-server-iot-2019-for-storage.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Windows Server IoT 2019 voor opslag
-  description: Windows Server IoT 2019 voor opslag volgt het beleid voor een vaste levenscyclus.
+  title: Windows Server IoT 2019 voor Opslag
+  description: Windows Server IoT 2019 voor Opslag volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 9e346c8980467df3bdbd3c9f9e9667b2fa81f9cf
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868721"
-name: Windows Server IoT 2019 voor opslag
+name: Windows Server IoT 2019 voor Opslag
 summary: >+
-  Windows Server IoT 2019 voor opslag volgt het beleid voor [een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Server IoT 2019 voor Opslag volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Standard, Workgroup
+  Dit is van toepassing op de volgende edities: Standaard, Workgroup
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 03/04/2019
   endDate: 01/09/2029
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standaard\n* Werkgroep"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standard\n* Workgroup"
