--- a/lifecycle-data/products/windows-server-iot-2019.yml
+++ b/lifecycle-data/products/windows-server-iot-2019.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Server IoT 2019
-  description: Windows Server IoT 2019 volgt het beleid voor vaste levenscyclus.
+  description: Windows Server IoT 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 31bc197c23ee1cdbba7340156da48c4a8d1aea4c
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868719"
 name: Windows Server IoT 2019
 summary: >+
-  Windows Server IoT 2019 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Server IoT 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Datacenter, Essentials, Standard, Telecommunications
+  Dit is van toepassing op de volgende edities: Datacenter, Essentials, Standard, Telecommunicatie
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 03/04/2019
   endDate: 01/09/2029
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n> [!NOTE]\n> Alle versies van Windows Server IoT 2019 volgen de levenscyclus van Windows Server 2019.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Onmisbaar\n* Standaard\n* Telecommunicatie"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n> [!NOTE]\n> Alle versies van Windows Server IoT 2019 volgen de levenscyclus van Windows Server 2019.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Essentials\n* Standard\n* Telecommunicatie"
