--- a/lifecycle-data/products/windows-server.yml
+++ b/lifecycle-data/products/windows-server.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Server
-  description: Windows Server volgt het beleid voor moderne levenscyclus.
+  description: Windows Server volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 27a932028448e8fe9d583c1d4169c6818a0224b7
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868823"
 name: Windows Server
 summary: >+
-  Windows Server volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Windows Server volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Datacenter, Standard
+  Dit is van toepassing op de volgende edities: Datacenter, standaard
 
 products:
 - windows
@@ -40,4 +40,4 @@ releases:
 - version: Version 1709
   startDate: 10/17/2017
   endDate: 04/09/2019
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Windows Server-servicekanalen: LTSC en SAC](/windows-server/get-started-19/servicing-channels-19)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows#what-are-the-requirements-for-servicing-and-updating-windows-10-semi-annual-channels)\n\n> [!NOTE]\n> De Windows 10 October Update (versie 1809) werd opnieuw uitgebracht op 13 november 2018. De ondersteuningsdata zijn dienovereenkomstig aangepast.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Windows Server servicing-kanalen: LTSC en SAC](/windows-server/get-started-19/servicing-channels-19)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows#what-are-the-requirements-for-servicing-and-updating-windows-10-semi-annual-channels)\n\n> [!NOTE]\n> De Windows 10-update van oktober (versie 1809) werd opnieuw vrijgegeven op 13 november 2018. De ondersteuningsdatums zijn op basis hiervan aangepast.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Standard"
