--- a/lifecycle-data/products/windows-xp-shared-computer-toolkit-10.yml
+++ b/lifecycle-data/products/windows-xp-shared-computer-toolkit-10.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Windows XP Shared Computer Toolkit 1,0
-  description: De gedeelde computer Toolkit 1,0 van Windows XP wordt gevolgd door het levens beleid van de component.
+  title: Windows XP Shared Computer Toolkit 1.0
+  description: Windows XP Shared Computer Toolkit 1.0 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 08/05/2020
   ms.openlocfilehash: 44d78a0c6bf4b91055ebcc9516c2c0b1f20f6984
   ms.sourcegitcommit: cc83950a649c02cedd0a5a869702e8e5605d18ec
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/05/2020
   ms.locfileid: "883420"
-name: Windows XP Shared Computer Toolkit 1,0
+name: Windows XP Shared Computer Toolkit 1.0
 summary: >+
-  De gedeelde computer Toolkit 1,0 van Windows XP wordt gevolgd door het levens beleid van de [component](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy) .
+  Windows XP Shared Computer Toolkit 1.0 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
