--- a/lifecycle-data/products/microsoft-lync-2010.yml
+++ b/lifecycle-data/products/microsoft-lync-2010.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Lync 2010
-  description: Microsoft Lync 2010 volgt het beleid voor een vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 2a5d4651d05052e79c1c28309fc8ad530e584aec
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  description: Microsoft Lync 2010 volgt het vaste levenscyclus beleid.
+  ms.date: 08/21/2020
+  ms.openlocfilehash: 815ef4b3c8026b5d508d221acfc67cae25770bcd
+  ms.sourcegitcommit: c4013bce086aedc575584ea34b1acb5c27d06a1b
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851772"
+  ms.lasthandoff: 08/21/2020
+  ms.locfileid: "907942"
 name: Microsoft Lync 2010
 summary: >+
-  Microsoft Lync 2010 volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Lync 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Attendant, Attendee, Group Chat, Standard
+  Dit geldt voor de volgende edities: Attendant, attendee, Group chat, Standard
 
 products:
 - office
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 01/25/2011
   endDate: 04/13/2021
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Begeleider\n* Deelnemer\n* Groepschat\n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Eigen\n* Deelnemer\n* Een groepsgesprek voeren\n* Standard"
