--- a/lifecycle-data/products/microsoft-office-audit-and-control-management-server-2013.yml
+++ b/lifecycle-data/products/microsoft-office-audit-and-control-management-server-2013.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Office Audit and Control Management Server 2013
-  description: Microsoft Office Audit and Control Management Server 2013 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 96d9fdc88fbd6ccfcd2a97e1b0a0703c2532411d
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  title: Microsoft Office audit and Control Management Server 2013
+  description: De beleidsregels voor Microsoft Office audit and Control Management 2013 server volgen het vaste levenscyclus beleid.
+  ms.date: 08/21/2020
+  ms.openlocfilehash: 95c21c2239aee0e4e83c2caf5dc3752c0915b58e
+  ms.sourcegitcommit: c4013bce086aedc575584ea34b1acb5c27d06a1b
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "852092"
-name: Microsoft Office Audit and Control Management Server 2013
+  ms.lasthandoff: 08/21/2020
+  ms.locfileid: "907905"
+name: Microsoft Office audit and Control Management Server 2013
 summary: >+
-  Microsoft Office Audit and Control Management Server 2013 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  De beleidsregels voor Microsoft Office audit and Control Management 2013 server volgen het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
 products:
