commit translated contents

--- a/lifecycle-data/products/office-xp.yml
+++ b/lifecycle-data/products/office-xp.yml
@@ -2,13 +2,13 @@
 metadata:
   title: Office XP
   description: In Office XP wordt het vaste levenscyclus beleid gevolgd.
-  ms.date: 08/19/2020
-  ms.openlocfilehash: 44b7cfd73af7cf60b8958ff6e21aaed982241a1f
-  ms.sourcegitcommit: acbc3d1849bad925ef030cf951960bd7eb1b4e42
+  ms.date: 08/27/2020
+  ms.openlocfilehash: fd2a7430cd31be1b9ad81287f9c583fbc2eba5fe
+  ms.sourcegitcommit: 0adb28bbd953e938286d5b8fb03cab57a2d18b3b
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 08/19/2020
-  ms.locfileid: "903759"
+  ms.lasthandoff: 08/27/2020
+  ms.locfileid: "922835"
 name: Office XP
 summary: >+
   In Office XP wordt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid gevolgd.
@@ -35,5 +35,5 @@ releases:
   endDate: 08/21/2003
 - version: Original Release
   startDate: 05/31/2001
-  endDate: 07/12/2011
-content: "\n\n\n## <a name=\"editions\"></a>Edition \n* Schrijven\n* Professional\n* Taalprogramma's\n* Verre\n* Webonderdelen"
+  endDate: 12/31/2002
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Developer\n* Professional\n* Taalprogramma's\n* Standard\n* Web Components"
