commit translated contents

--- a/lifecycle-data/products/microsoft-visual-studio-2005.yml
+++ b/lifecycle-data/products/microsoft-visual-studio-2005.yml
@@ -2,13 +2,13 @@
 metadata:
   title: Microsoft Visual Studio 2005
   description: Microsoft Visual Studio 2005 volgt het vaste levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 576095a27901552e7a275b0a349ed5e1edee8099
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  ms.date: 08/12/2020
+  ms.openlocfilehash: 3d7b18b9c262c1ac5f159250ef8a1746f79221eb
+  ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811777"
+  ms.lasthandoff: 08/13/2020
+  ms.locfileid: "893160"
 name: Microsoft Visual Studio 2005
 summary: >+
   Microsoft Visual Studio 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
@@ -30,4 +30,4 @@ releases:
 - version: Original Release
   startDate: 01/27/2006
   endDate: 01/08/2008
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuningsgegevens voor Visual J#](https://msdn.microsoft.com/vstudio/bb188593)\n* [Richtlijnen voor migratie](/visualstudio/porting/port-migrate-and-upgrade-visual-studio-projects?view=vs-2019)\n* [Productgegevens voor Visual Studio](https://www.VisualStudio.com)\n\n> [!NOTE]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.\n> [!NOTE]\n> Microsoft Visual Studio 2005 Team Edition voor Database Professionals uitgegeven op 2 maart 2007.\n\n## <a name=\"editions\"></a>Edities \n* Professional\n* Standard\n* Academische licentie voor de standaardeditie\n* Team Edition voor Database Professionals\n* Team Edition voor softwarearchitecten\n* Team Edition voor softwareontwikkelaars\n* Team Edition voor softwaretesters\n* Team Suite\n* Team Test Load Agent\n* Hulpprogramma's voor het Microsoft Office-systeem\n* VB Express\n* Visual C# Express\n* Visual C++ Express\n* Visual J# Express\n* Visual Web Developer Express"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/visualstudio/porting/port-migrate-and-upgrade-visual-studio-projects?view=vs-2019)\n* [Ondersteuningsgegevens voor Visual J#](https://msdn.microsoft.com/vstudio/bb188593)\n* [Productgegevens voor Visual Studio](https://www.VisualStudio.com)\n\n> [!NOTE]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.\n> [!NOTE]\n> Microsoft Visual Studio 2005 Team Edition voor Database Professionals uitgegeven op 2 maart 2007.\n\n## <a name=\"editions\"></a>Edities \n* Professional\n* Standard\n* Academische licentie voor de standaardeditie\n* Team Edition voor Database Professionals\n* Team Edition voor softwarearchitecten\n* Team Edition voor softwareontwikkelaars\n* Team Edition voor softwaretesters\n* Team Suite\n* Team Test Load Agent\n* Hulpprogramma's voor het Microsoft Office-systeem\n* VB Express\n* Visual C# Express\n* Visual C++ Express\n* Visual J# Express\n* Visual Web Developer Express"
