--- a/lifecycle-data/products/microsoft-office-2013.yml
+++ b/lifecycle-data/products/microsoft-office-2013.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office 2013
-  description: Microsoft Office 2013 volgt het vaste levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 57eeaf9939d11f53914fef0e92795621dfb9db44
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  description: Microsoft Office 2013 volgt het beleid voor de vaste levenscyclus.
+  ms.date: 08/19/2020
+  ms.openlocfilehash: 144877196e495c44a75cc95487426038c5321751
+  ms.sourcegitcommit: f2f920f4a81a356fb71402238234768a9e90fd51
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "852097"
+  ms.lasthandoff: 08/20/2020
+  ms.locfileid: "905241"
 name: Microsoft Office 2013
 summary: >+
-  Microsoft Office 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+  Microsoft Office 2013 volgt het beleid voor de [vaste](/lifecycle/policies/fixed) levenscyclus.
 
 
-  Dit is van toepassing op de volgende edities: Thuisgebruik en Zelfstandigen, Thuisgebruik en Studenten, Professional, Professional Plus, Professional Plus Home Use Program, Standard, Web Apps Server
+  Dit is van toepassing op de volgende edities: Thuisgebruik en Zelfstandigen, Thuisgebruik en Studenten, Multi-Language Pack, Professional, Professional Plus, Professional Plus Home Use Program, Standaard, Web Apps Server
 
 products:
 - office
@@ -30,4 +30,4 @@ releases:
 - version: Original Release
   startDate: 01/09/2013
   endDate: 04/14/2015
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://www.microsoft.com/microsoft-365/previous-versions/microsoft-office-2013)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Servicepack 1 is niet van toepassing op de Web Apps Server-editie. \n\n## <a name=\"editions\"></a>Edities \n* Thuisgebruik en Zelfstandigen\n* Thuisgebruik en Studenten\n* Professional\n* Professional Plus\n* Professional Plus Home Use Program\n* Standard\n* Web Apps Server"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://www.microsoft.com/microsoft-365/previous-versions/microsoft-office-2013)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Servicepack 1 is niet van toepassing op de Web Apps Server-editie. \n\n## <a name=\"editions\"></a>Edities \n* Thuisgebruik en Zelfstandigen\n* Thuisgebruik en Studenten\n* Multi-Language Pack\n* Professional\n* Professional Plus\n* Professional Plus Home Use Program\n* Standard\n* Web Apps Server"
