--- a/lifecycle-data/products/visual-studio-2015.yml
+++ b/lifecycle-data/products/visual-studio-2015.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visual Studio 2015
-  description: Visual Studio 2015 volgt het vaste levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 4300bd472c7f836c9d93e7f7e3da2005da410bac
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  description: Visual Studio 2015 volgt het beleid voor de vaste levenscyclus.
+  ms.date: 08/21/2020
+  ms.openlocfilehash: f5ff344edadae9c856d0cfce3d88ac23e1fa6394
+  ms.sourcegitcommit: 72c1339c867caa2110c5c1501a6659bcee72415d
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851901"
+  ms.lasthandoff: 08/21/2020
+  ms.locfileid: "906836"
 name: Visual Studio 2015
 summary: >+
-  Visual Studio 2015 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+  Visual Studio 2015 volgt het beleid voor de [vaste](/lifecycle/policies/fixed) levenscyclus.
 
 
-  Dit is van toepassing op de volgende edities: Agents, Community, Enterprise, Express voor Web, Express voor Windows 10, Express voor Windows Desktop, Modeling SDK, Professional, Release Management, Remote Tools, SDK, Shell (geïntegreerde modus), Shell (geïsoleerde modus), Test Professional, Visual C++ herdistribueerbaar
+  Dit is van toepassing op de volgende edities: Agents, Community, Enterprise, ESM, Express voor Web, Express voor Windows 10, Express voor Windows Desktop, Modeling SDK, Professional, PSM, Release Management, Werkbalk Extern, SDK, Shell (geïntegreerde modus), Shell (geïsoleerde modus), Test Professional, TPS, Visual C++ herdistribueerbaar
 
 products:
 - vs
@@ -30,4 +30,4 @@ releases:
 - version: Original Release
   startDate: 07/20/2015
   endDate: 10/14/2025
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](https://www.visualstudio.com/productinfo/vs-servicing-vs)\n\n\n## <a name=\"editions\"></a>Edities \n* Agents\n* Community\n* Enterprise\n* Express voor Web\n* Express voor Windows 10\n* Express voor Windows Desktop\n* Modeling SDK\n* Professional\n* Releasebeheer\n* Werkbalk extern\n* SDK\n* Shell (geïntegreerde modus)\n* Shell (geïsoleerde modus)\n* Test Professional\n* Visual C++ herdistribueerbaar"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](https://www.visualstudio.com/productinfo/vs-servicing-vs)\n\n\n## <a name=\"editions\"></a>Edities \n* Agents\n* Community\n* Enterprise\n*  ESM\n* Express voor Web\n* Express voor Windows 10\n* Express voor Windows Desktop\n* Modeling SDK\n* Professional\n* PSM\n* Releasebeheer\n* Werkbalk extern\n* SDK\n* Shell (geïntegreerde modus)\n* Shell (geïsoleerde modus)\n* Test Professional\n* TPS\n* Visual C++ herdistribueerbaar"
