--- a/lifecycle-data/products/visual-studio-2019.yml
+++ b/lifecycle-data/products/visual-studio-2019.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visual Studio 2019
-  description: Visual Studio 2019 volgt het vaste levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 3bb4a3be253fe45b27fa6baa8f165dc2fbb3ffd1
-  ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
+  description: Visual Studio 2019 volgt het beleid voor de vaste levenscyclus.
+  ms.date: 08/21/2020
+  ms.openlocfilehash: d5638d558c441faed42d3fdcfd2e5e9b8a89d2a5
+  ms.sourcegitcommit: 72c1339c867caa2110c5c1501a6659bcee72415d
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "868739"
+  ms.lasthandoff: 08/21/2020
+  ms.locfileid: "906873"
 name: Visual Studio 2019
 summary: >+
-  Visual Studio 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+  Visual Studio 2019 volgt het beleid voor de [vaste](/lifecycle/policies/fixed) levenscyclus.
 
 
-  Dit is van toepassing op de volgende edities: Agents, Opbouwhulpmiddelen, Community, Enterprise, voor Mac, IntelliTrace Standalone Collector, Prestatiehulpprogramma's, Professional, Werkbalk extern, Team Explorer, Visual C++ herdistribueerbaar
+  Dit is van toepassing op de volgende edities: Agents, Opbouwhulpmiddelen, Community, Enterprise, ESGH, voor Mac, IntelliTrace Standalone Collector, Prestatiehulpprogramma's, Professional, PSGH, PSM, Werkbalk Extern, Team Explorer, Visual C++ herdistribueerbaar
 
 products:
 - vs
@@ -30,4 +30,4 @@ releases:
 - version: Version 16.0
   startDate: 04/02/2019
   endDate: 01/12/2021
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Aankondiging](https://devblogs.microsoft.com/visualstudio/tis-the-season-visual-studio-2019/)\n* [Onderhoudsinformatie](/visualstudio/releases/2019/servicing)\n\n\n## <a name=\"editions\"></a>Edities \n* Agents\n* Opbouwhulpmiddelen\n* Community\n* Enterprise\n* Voor Mac\n* IntelliTrace Standalone Collector\n* Prestatiehulpprogramma's\n* Professional\n* Werkbalk extern\n* Team Explorer\n* Visual C++ herdistribueerbaar"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Aankondiging](https://devblogs.microsoft.com/visualstudio/tis-the-season-visual-studio-2019/)\n* [Onderhoudsinformatie](/visualstudio/releases/2019/servicing)\n\n\n## <a name=\"editions\"></a>Edities \n* Agents\n* Opbouwhulpmiddelen\n* Community\n* Enterprise\n* ESGH\n* Voor Mac\n* IntelliTrace Standalone Collector\n* Prestatiehulpprogramma's\n* Professional\n* PSGH\n* PSM\n* Werkbalk extern\n* Team Explorer\n* Visual C++ herdistribueerbaar"
