--- a/lifecycle-data/products/windows-vista.yml
+++ b/lifecycle-data/products/windows-vista.yml
@@ -2,19 +2,19 @@
 metadata:
   title: Windows Vista
   description: Windows Vista volgt het vaste levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: e2e6ab946bf405ed524f07047d055a786d7174dc
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  ms.date: 08/19/2020
+  ms.openlocfilehash: 5c98fe7339f950e080d2ae0450774abb13d9e7c6
+  ms.sourcegitcommit: 70c4608ec6344869c74ed63ff3f0e2ccb0dce3a0
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811894"
+  ms.lasthandoff: 08/19/2020
+  ms.locfileid: "903081"
 name: Windows Vista
 summary: >
   Windows Vista volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit is van toepassing op de volgende edities: Business, Business N, Enterprise, Enterprise X64, Home Basic, Home Basic 64-bits, Home Basic N, Home Basic N 64-bits, Home Premium, Home Premium 64-bits, Starter, Ultimate, Ultimate 64-bits
+  Dit is van toepassing op de volgende edities: Business, Business N, Business N 64-bits, Enterprise, Enterprise X64, Home Basic, Home Basic 64-bits, Home Basic N, Home Basic N 64-bits, Home Premium, Home Premium 64-bits, Starter, Ultimate, Ultimate 64-bits
 
 
   > [!IMPORTANT]
@@ -37,4 +37,4 @@ releases:
 - version: Original Release
   startDate: 01/25/2007
   endDate: 04/13/2010
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://support.microsoft.com/help/22882/windows-vista-end-of-support)\n* [Overwegingen voor Windows-upgrade en -migratie](/windows/deployment/upgrade/windows-upgrade-and-migration-considerations)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Business\n* Business N\n* Enterprise\n* Enterprise X64\n* Home Basic\n* Home Basic 64-bits\n* Home Basic N\n* Home Basic N 64-bits\n* Home Premium\n* Home Premium 64-bits\n* Starter\n* Ultimate\n* Ultimate 64-bits"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://support.microsoft.com/help/22882/windows-vista-end-of-support)\n* [Overwegingen voor Windows-upgrade en -migratie](/windows/deployment/upgrade/windows-upgrade-and-migration-considerations)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Business\n* Business N\n* Business N 64-bits\n* Enterprise\n* Enterprise X64\n* Home Basic\n* Home Basic 64-bits\n* Home Basic N\n* Home Basic N 64-bits\n* Home Premium\n* Home Premium 64-bits\n* Starter\n* Ultimate\n* Ultimate 64-bits"
