--- a/lifecycle-data/products/windows-xp.yml
+++ b/lifecycle-data/products/windows-xp.yml
@@ -2,19 +2,19 @@
 metadata:
   title: Windows XP
   description: Windows XP volgt het vaste levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: d4fd2bce3e032cdc468570a458c8f10c60ff9170
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  ms.date: 08/12/2020
+  ms.openlocfilehash: b87864c5f60526582efd3d8d986ce63c0d203e39
+  ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811892"
+  ms.lasthandoff: 08/13/2020
+  ms.locfileid: "893752"
 name: Windows XP
 summary: >
   Windows XP volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit is van toepassing op de volgende edities: Home, Professional, Professional voor Embedded Systems, Starter
+  Dit is van toepassing op de volgende edities: Home, Professional, Professional voor Embedded Systems, Professional x64, Starter
 
 
   > [!IMPORTANT]
@@ -43,4 +43,4 @@ releases:
 - version: Original Release
   startDate: 12/31/2001
   endDate: 08/30/2005
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/windows/deployment/upgrade/windows-upgrade-and-migration-considerations)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Home\n* Professional\n* Professional for Embedded Systems\n* Starter"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/windows/deployment/upgrade/windows-upgrade-and-migration-considerations)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> De startdatum voor Microsoft Windows XP Professional x64 Edition was 24 april 2005.\n\n## <a name=\"editions\"></a>Edities \n* Home\n* Professional\n* Professional for Embedded Systems\n* Professional x64\n* Starter"
