--- a/lifecycle-data/products/microsoft-office-publisher-2003.yml
+++ b/lifecycle-data/products/microsoft-office-publisher-2003.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Publisher 2003
-  description: Microsoft Office Publisher 2003 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: dc74fbb4c7ad1e9d6e27b507d00c15aadd1665dc
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  description: Microsoft Office Publisher 2003 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Standard,with Digital Imaging
+  ms.openlocfilehash: 02171136d8f297220ab847aa34d70f61e3264555
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812368"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "930338"
 name: Microsoft Office Publisher 2003
 summary: >+
-  Microsoft Office Publisher 2003 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office Publisher 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Standard, met Digital Imaging
+  Dit geldt voor de volgende edities: standaard met digitale afbeeldingen
 
 products:
 - office
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 11/24/2003
   endDate: 04/08/2014
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standaard\n* met Digital Imaging"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standard\n* met Digital Imaging"
