--- a/lifecycle-data/products/excel-2019.yml
+++ b/lifecycle-data/products/excel-2019.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Excel 2019
-  description: Excel 2019 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 3ed6e9ac38e9918c68505eec89ac4c9c6bc03f04
-  ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
+  description: Excel 2019 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Standard
+  ms.openlocfilehash: a143712b29fb51ca6867c7c65c6b39b05beeb13d
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "868670"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "931411"
 name: Excel 2019
 summary: >+
-  Excel 2019 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Excel 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Standaard
+  Dit is van toepassing op de volgende edities: Standard
 
 products:
 - office
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 09/24/2018
   endDate: 10/13/2026
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standard"
