--- a/lifecycle-data/products/exchange-server-2013.yml
+++ b/lifecycle-data/products/exchange-server-2013.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Exchange Server 2013
-  description: Exchange Server 2013 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 208a159b324e9631fcc2d5a54b42e00fc9aff7e3
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  description: Exchange Server 2013 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Enterprise,Standard
+  ms.openlocfilehash: 4362a67d623b5d2b1c99600a31880e0a584137a5
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851884"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "931300"
 name: Exchange Server 2013
 summary: >+
-  Exchange Server 2013 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Exchange Server 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise, Standard
+  Dit is van toepassing op de volgende edities: Enterprise, Standard
 
 products:
 - office
@@ -30,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 01/09/2013
   endDate: 04/14/2015
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Richtlijnen voor onderhoud](https://technet.microsoft.com/library/jj907309%28v)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor onderhoud](https://technet.microsoft.com/library/jj907309%28v)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
