--- a/lifecycle-data/products/exchange-server-2019.yml
+++ b/lifecycle-data/products/exchange-server-2019.yml
@@ -2,19 +2,20 @@
 metadata:
   title: Exchange Server 2019
   description: Exchange Server 2019 volgt het vaste levenscyclus beleid.
-  ms.date: 08/12/2020
-  ms.openlocfilehash: bdb446d3018cd0b854d01572662f0d39a1778df5
-  ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
+  ms.date: 09/01/2020
+  keywords: Enterprise,Standard
+  ms.openlocfilehash: 56188a0231413a812f5b4dea4eb8371c9bc9110b
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 08/13/2020
-  ms.locfileid: "892457"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "931115"
 name: Exchange Server 2019
 summary: >+
   Exchange Server 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise, Standard
+  Dit is van toepassing op de volgende edities: Enterprise, Standard
 
 products:
 - office
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 10/22/2018
   endDate: 10/14/2025
-content: "\n## <a name=\"links\"></a>Verbindingen \n* [Richtlijnen voor onderhoud](/Exchange/new-features/updates?view=exchserver-2019)\n\n\n## <a name=\"editions\"></a>Edition \n* Enterprise\n* Verre"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor onderhoud](/Exchange/new-features/updates?view=exchserver-2019)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
