--- a/lifecycle-data/products/expression-4.yml
+++ b/lifecycle-data/products/expression-4.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Expressie 4
-  description: Expressie 4 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: d043cbcae1ace9a561a53c39af5458bae79b4919
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  description: Expressie 4 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Design,Encoder,Studio Ultimate,Web
+  ms.openlocfilehash: ad3463184e4da721215fe51169c93401d2d9c848
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811827"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "930856"
 name: Expressie 4
 summary: >+
-  Expressie 4 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Expressie 4 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Design, Encoder, Studio Ultimate, Web
+  Dit geldt voor de volgende edities: ontwerpen, encoder, Studio Ultimate, Web
 
 products:
 - expression
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 08/26/2010
   endDate: 07/14/2020
-content: "\n\n> [!NOTE]\n> Het einde van de reguliere ondersteuning voor Expression Studio Ultimate 4 is 13 oktober 2015.\n\n## <a name=\"editions\"></a>Edities \n* Ontwerp\n* Encoder\n* Studio Ultimate\n* Web"
+content: "\n\n> [!NOTE]\n> Het einde van de mainstream ondersteuning voor Expression Studio Ultimate 4 is 13 oktober 2015.\n\n## <a name=\"editions\"></a>Edities \n* Vooraf\n* Huffman\n* Studio Ultimate\n* Web"
