--- a/lifecycle-data/products/expression-blend-2.yml
+++ b/lifecycle-data/products/expression-blend-2.yml
@@ -1,16 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Expressie 2
-  description: Expressie 2 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 0ff3dba3df24ff405a22bfacac75ea04ab227f90
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  description: Expressie 2 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Blend,Design,Encoder,Studio,Web
+  ms.openlocfilehash: 5186f4bbb53b110f625835b0250418a4594bf78b
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811828"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "930819"
 name: Expressie 2
-summary: "Expressie 2 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.\n\nDit geldt voor de volgende edities: Blend, Design, Encoder, Studio, Web\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. \n"
+summary: "Expressie 2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.\n\nDit geldt voor de volgende edities: mengsel, ontwerp, encoder, Studio, Web\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. \n"
 products:
 - expression
 policyType: fixed
@@ -22,4 +23,4 @@ releases:
 - version: Original Release
   startDate: 07/24/2008
   endDate: 10/09/2018
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Mix\n* Ontwerp\n* Encoder\n* Studio\n* Web"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Blend\n* Vooraf\n* Huffman\n* Studio\n* Web"
