--- a/lifecycle-data/products/expression-web-3.yml
+++ b/lifecycle-data/products/expression-web-3.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Expressie 3
-  description: Expressie 3 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 9544cb1ac337a36e0e9d12b4afde25d392bdd767
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  description: Expressie 3 volgt het beleid voor de vaststelling van de levenscyclus.
+  ms.date: 09/01/2020
+  keywords: Design,Encoder,Studio,Web
+  ms.openlocfilehash: 406642d42292645f0a1f233b77937ba831d08671
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811826"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "930745"
 name: Expressie 3
 summary: >+
-  Expressie 3 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Expressie 3 volgt het beleid voor de [vaststelling](/lifecycle/policies/fixed) van de levenscyclus.
 
 
-  Dit geldt voor de volgende edities: Design, Encoder, Studio, Web
+  Dit geldt voor de volgende edities: ontwerpen, encoder, Studio, Web
 
 products:
 - expression
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 10/19/2009
   endDate: 01/14/2020
-content: "\n\n> [!NOTE]\n> De startdatum voor Expression Design 3 is 19 november 2009. \n\n## <a name=\"editions\"></a>Edities \n* Ontwerp\n* Encoder\n* Studio\n* Web"
+content: "\n\n> [!NOTE]\n> De begindatum van expressie ontwerp 3 is 19 november 2009. \n\n## <a name=\"editions\"></a>Edities \n* Vooraf\n* Huffman\n* Studio\n* Web"
