--- a/lifecycle-data/products/microsoft-office-2016.yml
+++ b/lifecycle-data/products/microsoft-office-2016.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office 2016
-  description: Microsoft Office 2016 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 0862856c981f0887a99cd499275edcda6f18533b
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  description: Microsoft Office 2016 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Home and Business,Home and Student,Personal,Professional,Professional Plus,Standard
+  ms.openlocfilehash: 7d2f310c7edad1f2fb5f6b6151add26c277c6ffe
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "852094"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "930486"
 name: Microsoft Office 2016
 summary: >+
-  Microsoft Office 2016 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Home and Business, Home and Student, Personal, Professional, Professional Plus, Standard
+  Dit geldt voor de volgende edities: voor Thuisgebruik en zelfstandigen, voor Thuisgebruik en studenten, persoonlijk, professioneel, professioneel Plus, standaard
 
 products:
 - office
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 09/22/2015
   endDate: 10/14/2025
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Thuis en zakelijk\n* Thuis en student\n* Persoonlijke\n* Professionele\n* Professioneel Plus\n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Thuisgebruik en Zelfstandigen\n* Thuisgebruik en Studenten\n* Personal\n* Professional\n* Professional Plus\n* Standard"
