--- a/lifecycle-data/products/biztalk-server-2016.yml
+++ b/lifecycle-data/products/biztalk-server-2016.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: BizTalk Server 2016
-  description: BizTalk Server 2016 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 0cce3539c4760d2472891e36f8edfa267a44c7ac
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  description: BizTalk Server 2016 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Branch,Developer,Enterprise,Standard
+  ms.openlocfilehash: 1442cb807ade39555954dc0f2fba82434027cb2c
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851638"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "932151"
 name: BizTalk Server 2016
 summary: >+
-  BizTalk Server 2016 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  BizTalk Server 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Branch, Developer, Enterprise, Standard
+  Dit is van toepassing op de volgende edities: Branch, Developer, Enterprise, Standard
 
 products:
 - microsoft-servers
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 12/01/2016
   endDate: 01/11/2027
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Productinformatie](/biztalk/install-and-config-guides/biztalk-server-2016-what-s-new-and-installation)\n\n\n## <a name=\"editions\"></a>Edities \n* Branch\n* Ontwikkelaar\n* Enterprise\n* Standaard"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/biztalk/install-and-config-guides/biztalk-server-2016-what-s-new-and-installation)\n\n\n## <a name=\"editions\"></a>Edities \n* Branch\n* Developer\n* Enterprise\n* Standard"
