--- a/lifecycle-data/products/microsoft-host-integration-server-2006.yml
+++ b/lifecycle-data/products/microsoft-host-integration-server-2006.yml
@@ -2,13 +2,14 @@
 metadata:
   title: Microsoft Host Integration Server 2006
   description: Microsoft Host Integration Server 2006 volgt het vaste levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: bb7b9894a034924a5ddeb112c903ae6891321264
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  ms.date: 09/01/2020
+  keywords: Developer,Standard
+  ms.openlocfilehash: b7da52c555619a2d4222ae264140f646fb161913
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812071"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "933779"
 name: Microsoft Host Integration Server 2006
 summary: "Microsoft Host Integration Server 2006 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Developer, Standard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie. \n"
 products:
