--- a/lifecycle-data/products/microsoft-lync-2013.yml
+++ b/lifecycle-data/products/microsoft-lync-2013.yml
@@ -1,17 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Lync 2013
-  description: Lync 2013 volgt het beleid voor een vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 009c0c9a5f3eae47f5abd1b83b81dcc98bba3482
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  description: Lync 2013 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: SDK,Standard
+  ms.openlocfilehash: a5523cba92283c421c42d23d9753864a0408bf01
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851769"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "933335"
 name: Lync 2013
 summary: >+
-  Lync 2013 volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Lync 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
   Dit geldt voor de volgende edities: SDK, Standard
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 01/09/2013
   endDate: 04/11/2023
-content: "\n\n> [!NOTE]\n> De Skype voor Bedrijven 2015-clientversie is een update voor de Lync 2013-client en volgt dezelfde levenscyclus van het product.\nDe startdatum voor Lync 2013 SDK is 23 februari 2013. \n\n## <a name=\"editions\"></a>Edities \n* Sdk\n* Standaard"
+content: "\n\n> [!NOTE]\n> De release van de client van Skype voor bedrijven 2015 is een update van de Lync 2013-client en volgt dezelfde productlevenscyclus.\nDe begindatum van Lync 2013 SDK is 23 februari 2013. \n\n## <a name=\"editions\"></a>Edities \n* SDK\n* Standard"
