--- a/lifecycle-data/products/microsoft-office-project-2003.yml
+++ b/lifecycle-data/products/microsoft-office-project-2003.yml
@@ -2,13 +2,14 @@
 metadata:
   title: Microsoft Office Project 2003
   description: Microsoft Office Project 2003 volgt het vaste levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 51b9bd9785cbcecf7248ab770a4a2423ad6135a1
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  ms.date: 09/01/2020
+  keywords: Professional,Standard
+  ms.openlocfilehash: 5d27a4ac1b21778f175b31fd897a986ec8159342
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812714"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "932817"
 name: Microsoft Office Project 2003
 summary: "Microsoft Office Project 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Professional, Standard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
