commit translated contents

--- a/lifecycle-data/products/microsoft-365.yml
+++ b/lifecycle-data/products/microsoft-365.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft 365
-  description: Microsoft 365 volgt het beleid voor moderne levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 305fc57c897c1f8b2eb95b170d5b8403e1ea35ee
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  description: Microsoft 365 volgt het moderne levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Business,Education,Enterprise,Government
+  ms.openlocfilehash: 49d1c65ad462a3ce987df621004cf7341ac4aa23
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "852053"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "935962"
 name: Microsoft 365
 summary: >+
-  Microsoft 365 volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Microsoft 365 volgt het [moderne](/lifecycle/policies/modern) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Business, Education, Enterprise, Government
+  Dit geldt voor de volgende edities: Business, education, Enterprise, Government
 
 products:
 - office
@@ -24,4 +25,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 09/22/2015
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Microsoft 365-routekaart](https://www.microsoft.com/microsoft-365/roadmap)\n* [Systeemvereisten](https://www.microsoft.com/microsoft-365/microsoft-365-and-office-resources)\n\n\n## <a name=\"editions\"></a>Edities \n* Bedrijven\n* Onderwijs\n* Enterprise\n* Overheid"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Microsoft 365-wegwijzer](https://www.microsoft.com/microsoft-365/roadmap)\n* [Systeemvereisten](https://www.microsoft.com/microsoft-365/microsoft-365-and-office-resources)\n\n\n## <a name=\"editions\"></a>Edities \n* Business\n* Education\n* Enterprise\n* Overheid"
