--- a/lifecycle-data/products/microsoft-speech-server-2004.yml
+++ b/lifecycle-data/products/microsoft-speech-server-2004.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Speech Server 2004
-  description: Microsoft Speech Server 2004 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 50ebb3b700a83d7d247d368d948c2ff051a14b18
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  description: Microsoft Speech Server 2004 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Enterprise,Standard
+  ms.openlocfilehash: 2fb4a48b2caffce89e54dac838ff7f1149886d48
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812026"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "937072"
 name: Microsoft Speech Server 2004
 summary: >+
-  Microsoft Speech Server 2004 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Speech Server 2004 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise, Standard
+  Dit is van toepassing op de volgende edities: Enterprise, Standard
 
 products:
 - office
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 04/28/2004
   endDate: 07/08/2014
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
