--- a/lifecycle-data/products/expression.yml
+++ b/lifecycle-data/products/expression.yml
@@ -2,15 +2,16 @@
 metadata:
   title: Mening
   description: Expressie volgt het vaste levenscyclus beleid.
-  ms.date: 08/12/2020
-  ms.openlocfilehash: c81accb05bdbd957a699685c83074735956a009e
-  ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
+  ms.date: 09/01/2020
+  keywords: Blend,Design,Encoder,Studio
+  ms.openlocfilehash: 2d2e5c18c1e8ca1b355bfe392df42d6a351e6585
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 08/13/2020
-  ms.locfileid: "893382"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "936221"
 name: Mening
-summary: "Expressie volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.\n\nDit geldt voor de volgende edities: mengsel, ontwerp, encoder, Studio\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is beëindigd. \n"
+summary: "Expressie volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.\n\nDit geldt voor de volgende edities: mengsel, ontwerp, encoder, Studio\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
 - expression
 policyType: fixed
@@ -22,4 +23,4 @@ releases:
 - version: Original Release
   startDate: 07/27/2007
   endDate: 10/10/2017
-content: "\n\n> [!NOTE]\n> De begindatum voor de overvloeiing van expressies is 13 juli 2007. \n\n## <a name=\"editions\"></a>Edition \n* Blend\n* Vooraf\n* Huffman\n* Studio"
+content: "\n\n> [!NOTE]\n> De begindatum voor de overvloeiing van expressies is 13 juli 2007. \n\n## <a name=\"editions\"></a>Edities \n* Blend\n* Vooraf\n* Huffman\n* Studio"
