--- a/lifecycle-data/products/microsoft-office-2004-for-mac.yml
+++ b/lifecycle-data/products/microsoft-office-2004-for-mac.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office 2004 voor Mac
-  description: Microsoft Office 2004 voor Mac volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 14513bc7089568baf86dfe8f775cc25658cda7f4
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  description: Microsoft Office 2004 voor Mac volgt het beleid voor de vaste levenscyclus.
+  ms.date: 09/01/2020
+  keywords: Professional,Standard,Student and Teacher
+  ms.openlocfilehash: 12b63fa73b4b6a4bfc393cc62234147382a6d46a
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811809"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "936831"
 name: Microsoft Office 2004 voor Mac
 summary: >+
-  Microsoft Office 2004 voor Mac volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office 2004 voor Mac volgt het beleid voor de [vaste](/lifecycle/policies/fixed) levenscyclus.
 
 
-  Dit geldt voor de volgende edities: Professional, Standard, Student en Teacher
+  Dit geldt voor de volgende edities: Professional, Standard, leerling en docent
 
 products:
 - office
@@ -26,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 07/13/2004
   endDate: 01/10/2012
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Professionele\n* Standaard\n* Student en leraar"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Professional\n* Standard\n* Student en Teacher"
