--- a/lifecycle-data/products/microsoft-office-2016-for-mac.yml
+++ b/lifecycle-data/products/microsoft-office-2016-for-mac.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office 2016 voor Mac
-  description: Microsoft Office 2016 voor Mac volgt het beleid voor een vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 8d2998bebb75602990459d9d60060f04cc516e03
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  description: Microsoft Office 2016 voor Mac volgt het beleid voor de vaste levenscyclus.
+  ms.date: 09/01/2020
+  keywords: Home and Business,Home and Student,Standard
+  ms.openlocfilehash: b92cf0db708d566826b8d260ef9026bc308c41ce
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "852095"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "936295"
 name: Microsoft Office 2016 voor Mac
 summary: >+
-  Microsoft Office 2016 voor Mac volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Office 2016 voor Mac volgt het beleid voor de [vaste](/lifecycle/policies/fixed) levenscyclus.
 
 
-  Dit geldt voor de volgende edities: Home and Business, Home en Student, Standard
+  Dit geldt voor de volgende edities: voor Thuisgebruik en zelfstandigen, voor Thuisgebruik en studenten, Standard
 
 products:
 - office
@@ -26,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 09/22/2015
   endDate: 10/13/2020
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Thuis en zakelijk\n* Thuis en student\n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Thuisgebruik en Zelfstandigen\n* Thuisgebruik en Studenten\n* Standard"
