--- a/lifecycle-data/products/microsoft-visual-sourcesafe-2005.yml
+++ b/lifecycle-data/products/microsoft-visual-sourcesafe-2005.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Visual SourceSafe 2005
-  description: Microsoft Visual SourceSafe 2005 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 9f7cb8183628d197cfa31aecea78d5bd99de34b9
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  description: Microsoft Visual SourceSafe 2005 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: Standard
+  ms.openlocfilehash: f7d67637da3426c4d3852deec2e86b2910ea3424
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811918"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "937627"
 name: Microsoft Visual SourceSafe 2005
 summary: >+
-  Microsoft Visual SourceSafe 2005 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Visual SourceSafe 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Standaard
+  Dit is van toepassing op de volgende edities: Standard
 
 products:
 - vs
@@ -27,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 01/27/2006
   endDate: 07/11/2017
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standaard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Standard"
