--- a/lifecycle-data/products/visual-studio-team-foundation-server-2012.yml
+++ b/lifecycle-data/products/visual-studio-team-foundation-server-2012.yml
@@ -1,20 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visual Studio Team Foundation Server 2012
-  description: Visual Studio Team Foundation Server 2012 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: fd163f4af7e1f56e537990c97f59aa03cbb323c2
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
+  description: Visual Studio Team Foundation Server 2012 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: All
+  ms.openlocfilehash: 010d56498bce5718034fa1af505e985ed93f40ce
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "852033"
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "937331"
 name: Visual Studio Team Foundation Server 2012
 summary: >+
-  Visual Studio Team Foundation Server 2012 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Visual Studio Team Foundation Server 2012 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
-  Dit geldt voor de volgende edities: Alle
+  Dit is van toepassing op de volgende edities: Alles
 
 products:
 - vs
@@ -30,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 10/31/2012
   endDate: 01/13/2015
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/azure/devops/server/upgrade/get-started?view=azure-devops)\n\n\n## <a name=\"editions\"></a>Edities \n* Alle"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/azure/devops/server/upgrade/get-started?view=azure-devops)\n\n\n## <a name=\"editions\"></a>Edities \n* Alles"
