--- a/lifecycle-data/products/windows-mobile-50.yml
+++ b/lifecycle-data/products/windows-mobile-50.yml
@@ -1,17 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Windows Mobile 5.0
-  description: Windows Mobile 5.0 volgt het beleid voor vaste levenscyclus.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: 17f50270e11da1808a849ea828b7f070156fb8fe
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  title: Windows Mobile 5,0
+  description: Windows Mobile 5,0 volgt het vaste levenscyclus beleid.
+  ms.date: 09/01/2020
+  keywords: for Pocket PC,for Smartphones
+  ms.openlocfilehash: 7a07c670b79f79c4c1e9406cff7b89db9eaab660
+  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
   ms.translationtype: MT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811753"
-name: Windows Mobile 5.0
+  ms.lasthandoff: 09/01/2020
+  ms.locfileid: "939847"
+name: Windows Mobile 5,0
 summary: >
-  Windows Mobile 5.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Mobile 5,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
 
 
   Dit geldt voor de volgende edities: voor Pocket PC, voor smartphones
@@ -19,7 +20,7 @@ summary: >
 
   > [!IMPORTANT]
 
-  > Ondersteuning voor dit product is beëindigd.
+  > De ondersteuning voor dit product is beëindigd.
 products:
 - windows
 policyType: fixed
